# metamarker_profile

./: .gitignore  Makefile  README.md  environment.yml  meta_marker_count.sh  metamarker_profile.py  pyproject.toml
metamarker_profile/: __init__.py  cli.py
scripts/: analysis_common.R  biomarker_discovery_nonparametric.R  build_ref_files.py  differential_abundance_compositional.R  disturbance_event_response.R  diversity_alpha_beta.R  env_explained_variation_taxa_functions.R  extract_lineage_reads_assemble.py  functional_profile_analysis.R  mantel_env_community_heatmap.R  network_association_analysis.R  plot_rf_importance_ridgeline.R  taxa_time_rank_spacetime.R
